vpc_endpoints.tf

# VPC Endpoint Security Group
resource "aws_security_group" "vpc_endpoint" {
  name   = "${var.project}-vpce-sg"
  vpc_id = module.vpc.vpc_id
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = [module.vpc.vpc_cidr_block]
  }
  tags = merge(
    var.common_tags,
    tomap({ "Name" = "${var.project}-sg-vpc-endpoint" })
  )
}

# VPC Endpoints

resource "aws_vpc_endpoint" "s3" {
  count             = var.enable_s3_endpoint ? 1 : 0
  vpc_id            = module.vpc.vpc_id
  service_name      = "com.amazonaws.${data.aws_region.current.name}.s3"
  vpc_endpoint_type = "Gateway"
  route_table_ids   = module.vpc.private_route_table_ids
  tags = merge(
    var.common_tags,
    tomap({ "Name" = "${var.project}-s3-endpoint" })
  )
}

resource "aws_vpc_endpoint" "dkr" {
  count               = var.enable_dkr_endpoint ? 1 : 0
  vpc_id              = module.vpc.vpc_id
  private_dns_enabled = true
  service_name        = "com.amazonaws.${data.aws_region.current.name}.ecr.dkr"
  vpc_endpoint_type   = "Interface"
  security_group_ids  = [aws_security_group.vpc_endpoint.id]
  subnet_ids          = module.vpc.private_subnets
  tags = merge(
    var.common_tags,
    tomap({ "Name" = "${var.project}-dkr-endpoint" })
  )
}

resource "aws_vpc_endpoint" "dkr_api" {
  count               = var.enable_dkr_api_endpoint ? 1 : 0
  vpc_id              = module.vpc.vpc_id
  private_dns_enabled = true
  service_name        = "com.amazonaws.${data.aws_region.current.name}.ecr.api"
  vpc_endpoint_type   = "Interface"
  security_group_ids  = [aws_security_group.vpc_endpoint.id]
  subnet_ids          = module.vpc.private_subnets
  tags = merge(
    var.common_tags,
    tomap({ "Name" = "${var.project}-dkr-api-endpoint" })
  )
}

resource "aws_vpc_endpoint" "logs" {
  count               = var.enable_logs_endpoint ? 1 : 0
  vpc_id              = module.vpc.vpc_id
  private_dns_enabled = true
  service_name        = "com.amazonaws.${data.aws_region.current.name}.logs"
  vpc_endpoint_type   = "Interface"
  security_group_ids  = [aws_security_group.vpc_endpoint.id]
  subnet_ids          = module.vpc.private_subnets
  tags = merge(
    var.common_tags,
    tomap({ "Name" = "${var.project}-logs-endpoint" })
  )
}

resource "aws_vpc_endpoint" "secretsmanager" {
  count               = var.enable_secretsmanager_endpoint ? 1 : 0
  vpc_id              = module.vpc.vpc_id
  private_dns_enabled = true
  service_name        = "com.amazonaws.${data.aws_region.current.name}.secretsmanager"
  vpc_endpoint_type   = "Interface"
  security_group_ids  = [aws_security_group.vpc_endpoint.id]
  subnet_ids          = module.vpc.private_subnets
  tags = merge(
    var.common_tags,
    tomap({ "Name" = "${var.project}-secretsmanager-endpoint" })
  )
}

resource "aws_vpc_endpoint" "ssm" {
  count               = var.enable_ssm_endpoint ? 1 : 0
  vpc_id              = module.vpc.vpc_id
  private_dns_enabled = true
  service_name        = "com.amazonaws.${data.aws_region.current.name}.ssm"
  vpc_endpoint_type   = "Interface"
  security_group_ids  = [aws_security_group.vpc_endpoint.id]
  subnet_ids          = module.vpc.private_subnets
  tags = merge(
    var.common_tags,
    tomap({ "Name" = "${var.project}-ssm-endpoint" })
  )
}

resource "aws_vpc_endpoint" "kms" {
  count               = var.enable_kms_endpoint ? 1 : 0
  vpc_id              = module.vpc.vpc_id
  private_dns_enabled = true
  service_name        = "com.amazonaws.${data.aws_region.current.name}.kms"
  vpc_endpoint_type   = "Interface"
  security_group_ids  = [aws_security_group.vpc_endpoint.id]
  subnet_ids          = module.vpc.private_subnets
  tags = merge(
    var.common_tags,
    tomap({ "Name" = "${var.project}-kms-endpoint" })
  )
}
